Adding Stisla Admin Template

--- a/resources/views/partials/auth/flash.edge
+++ b/resources/views/partials/auth/flash.edge
@@ -1,5 +1,5 @@
 @if( old('flash_info') )
-  <div class="alert alert-info ml-5 mr-5">
+  <div class="alert alert-info">
     {{ old('flash_info') }}
 
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -10,7 +10,7 @@
 @endif
 
 @if( old('flash_error') )
-  <div class="alert alert-danger ml-5 mr-5">
+  <div class="alert alert-danger">
     {{ old('flash_error') }}
 
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -21,7 +21,7 @@
 @endif
 
 @if( old('errors') )
-  <div class="alert alert-danger ml-5 mr-5">
+  <div class="alert alert-danger">
     @each( error in old('errors') )
       <ul>
         <li>{{ error.message }}</li>
