--- a/resources/views/layouts/auth.edge
+++ b/resources/views/layouts/auth.edge
@@ -1,7 +1,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <meta charset="utf-8" />
-  <title>pend</title>
+  <title>Adonis Starter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   {{ style('app') }}
